Agregar archivos para el proyecto de la libreria.

--- a/index.html
+++ b/index.html
@@ -9,11 +9,21 @@
         <link rel="stylesheet" href="style.css">
         <script src="script.js"></script>
 	</head>
-			<!--Body Part-->
+		<!--Body Part-->
 	<body>
-			<!--Footer-->
-			<footer>
-			<p>Cristian Felipe &copy; 2018.</p>	
-            </footer>
+		<h1>Factura Libreria Proyeto</h1>
+		<p>Esta factura se ha impreso en la consola.</p>
+		<p>Para ver la informacion seguir los siguientes pasos:</p>
+
+		<ol class="instruc">
+			<li>Click derecho en cualquier parte de la pagina.</li>
+			<li>Seleccionar la opcion Inspeccionar del menu desplegable.</li>
+			<li>Luego seleccionar la opcion Consola o Console en caso de ser en ingles.</li>
+			<li>Listo, ahora usted puede ver los datos de su factura.</li>
+		</ol>
+		<!--Footer-->
+		<footer id="footer">
+		<p>Cristian Felipe &copy; 2018.</p>	
+        </footer>
 	</body>
 </html>
